# index

./: .dockerignore  CNAME  Dockerfile  README.md  app.py  index.html  main.py  pyproject.toml  resolver.py
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml
.streamlit/: config.toml  styles.css
data/: extras.json
scripts/: validate_extras.py
