[project]
name = "nationdex-index"
version = "1.0.0"
description = "Official index of extras for Project NationDex 2026."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.0",
    "ruff>=0.15.16",
    "streamlit>=1.58.0",
    "ty>=0.0.46",
]

[project.scripts]
nationdex-index = "main:main"
